=== HEAD

* Fix regression in timestamps and table inheritance plugin where column values would not be saved if validation is skipped (jeremyevans) (#839)

* Add pg_enum extension, for dealing with PostgreSQL enums (jeremyevans)

* Add modification_detection plugin, for automatic detection of in-place column value modifications (jeremyevans)

* Speed up using plain strings, numbers, true, false, and nil in json columns if underlying json library supports them (jeremyevans) (#834)

=== 4.12.0 (2014-07-01)

* Support :readonly Database option in sqlite adapter (ippeiukai, jeremyevans) (#832)

* Automatically setup max_length validations for string columns in the auto_validations plugin (jeremyevans)

* Add :max_length entry to column schema hashes for string types (jeremyevans)

* Add :before_thread_exit option to Database#listen_for_static_cache_updates in pg_static_cache_updater extension (jeremyevans)

* Add Database#values on PostgreSQL to create a dataset that uses VALUES instead of SELECT (jeremyevans)

* Add Model#set_nested_attributes to nested_attributes, allowing setting nested attributes options per-call (jeremyevans)

* Use explicit columns when using automatically prepared SELECT statements in the prepared statement plugins (jeremyevans)

* Make Dataset#insert_select on PostgreSQL respect existing RETURNING clause (jeremyevans)

* Fix eager loading limited associations via a UNION when an association block is used (jeremyevans)

* Associate reciprocal object before saving associated object when creating new objects in nested_attributes (chanks, jeremyevans) (#831)

* Handle intervals containing more than 100 hours in the pg_interval extension's parser (will) (#827)

* Remove methods/class deprecated in 4.11.0 (jeremyevans)

* Allow Dataset#natural_join/cross_join and related methods to take a options hash passed to join_table (jeremyevans)
